--- a/CONTACT.html
+++ b/CONTACT.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
   <link rel="stylesheet" href="assets/bootstrap-material-design-font/css/material.css">
+  <link rel="stylesheet" href="assets/et-line-font-plugin/style.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
@@ -50,7 +51,7 @@
 
                     <div class="navbar-brand">
                         
-                        <a class="navbar-caption text-black" href="https://elisiapoelman.github.io/PUB/">&nbsp;E L I S I A &nbsp; P O E L M A N<br></a>
+                        <a class="navbar-caption text-black" href="https://elisiapoelman.github.io/PUB/">EL I S I A &nbsp;P O E L M A N<br></a>
                     </div>
 
                 </div>
@@ -60,7 +61,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"></a></li><li class="nav-item dropdown"><a class="nav-link link" href="SCHILDERIJEN.html" aria-expanded="false">&nbsp; &nbsp; &nbsp; &nbsp; SCHILDERIJEN</a></li><li class="nav-item"><a class="nav-link link" href="OVER.html" aria-expanded="false">OVER</a></li><li class="nav-item dropdown"><a class="nav-link link" href="CONTACT.html" aria-expanded="false">CONTACT</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="CONTACT.html" aria-expanded="true" data-toggle="dropdown-submenu">SOCIAAL</a><div class="dropdown-menu"><a class="dropdown-item" href="http://instagram.com/elisiapoelman" target="_blank"><span class="socicon socicon-instagram mbr-iconfont mbr-iconfont-btn" style="color: rgb(235, 107, 86);"></span>INSTAGRAM</a></div></li><li class="nav-item"><a class="nav-link link" href="DRAWINGS.html" aria-expanded="false"></a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="https://mobirise.com/">DOWNLOAD</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"></a></li><li class="nav-item dropdown"><a class="nav-link link" href="SCHILDERIJEN.html" aria-expanded="false">&nbsp;SCHILDERIJEN</a></li><li class="nav-item"><a class="nav-link link" href="OVER.html" aria-expanded="false">OVER</a></li><li class="nav-item dropdown"><a class="nav-link link" href="CONTACT.html" aria-expanded="false">CONTACT</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="CONTACT.html" aria-expanded="false" data-toggle="dropdown-submenu">SOCIAAL</a><div class="dropdown-menu"><a class="dropdown-item" href="http://instagram.com/elisiapoelman" target="_blank"><span class="socicon socicon-instagram mbr-iconfont mbr-iconfont-btn" style="color: rgb(235, 107, 86);"></span>INSTAGRAM</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="CONTACT.html" aria-expanded="false" data-toggle="dropdown-submenu"><span class="etl-icon icon-global mbr-iconfont mbr-iconfont-btn" style="font-size: 17px; color: rgb(0, 0, 0);"></span></a><div class="dropdown-menu"><a class="dropdown-item" href="https://elisiapoelman.github.io/NL1/">NL</a><a class="dropdown-item" href="https://elisiapoelman.github.io/PUB">ENG</a></div></li><li class="nav-item"><a class="nav-link link" href="DRAWINGS.html" aria-expanded="false"></a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="https://mobirise.com/">DOWNLOAD</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -73,7 +74,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Generator</a></section><section class="mbr-section mbr-after-navbar" id="form1-3" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Site Builder</a></section><section class="mbr-section mbr-after-navbar" id="form1-3" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 120px;">
     
     <div class="mbr-section mbr-section__container mbr-section__container--middle">
         <div class="container">
@@ -98,7 +99,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACTEER MIJ">
 
-                        <input type="hidden" value="bil1+4JMqWj7q5T00FQ/tu814gRGZLH+ssUggz7JgPGwbkPVxwHOQawN/ir30zB3xKwMGyxEaYJn5iFQMDZnBpOK3wombowSkl37nH0DYHmRm2glcp06aEDF7IaHe8Sz" data-form-email="true">
+                        <input type="hidden" value="DO2xykUqWOaNZHpUV/uj6WBVDfVAJk51ZRnT374E1BQHFxHd8XJFGXFi/4AivFDmagzDbRx0SzkH2Cd6y1c7D2X4AC4MSmEezpNiV2E8KHI/nDMy8WGf4kdyWN1ubaV8" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
