--- a/CONTACT.html
+++ b/CONTACT.html
@@ -51,7 +51,7 @@
 
                     <div class="navbar-brand">
                         
-                        <a class="navbar-caption text-black" href="https://elisiapoelman.github.io/PUB/">EL I S I A &nbsp;P O E L M A N<br></a>
+                        <a class="navbar-caption text-black" href="https://elisiapoelman.github.io/PUB/">E L I S I A &nbsp; P O E L M A N<br></a>
                     </div>
 
                 </div>
@@ -74,7 +74,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Site Builder</a></section><section class="mbr-section mbr-after-navbar" id="form1-3" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Site Generator</a></section><section class="mbr-section mbr-after-navbar" id="form1-3" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 120px;">
     
     <div class="mbr-section mbr-section__container mbr-section__container--middle">
         <div class="container">
@@ -99,7 +99,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACTEER MIJ">
 
-                        <input type="hidden" value="DO2xykUqWOaNZHpUV/uj6WBVDfVAJk51ZRnT374E1BQHFxHd8XJFGXFi/4AivFDmagzDbRx0SzkH2Cd6y1c7D2X4AC4MSmEezpNiV2E8KHI/nDMy8WGf4kdyWN1ubaV8" data-form-email="true">
+                        <input type="hidden" value="Lz4jgwVkLkHvIuflPKRqEUyW+DbPUWtWO9Nr45TtzfdYISRreTUY6AhJ8P/frCUp2rXsTAkE/s6MQzfvXHD6RRGKSXCBtiy32/n5ZhoYkUXibdiYxtK2Iu4rVgCdRqys" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
