--- a/SCHILDERIJEN.html
+++ b/SCHILDERIJEN.html
@@ -51,7 +51,7 @@
 
                     <div class="navbar-brand">
                         
-                        <a class="navbar-caption text-black" href="https://elisiapoelman.github.io/PUB/">EL I S I A &nbsp;P O E L M A N<br></a>
+                        <a class="navbar-caption text-black" href="https://elisiapoelman.github.io/PUB/">E L I S I A &nbsp; P O E L M A N<br></a>
                     </div>
 
                 </div>
@@ -74,7 +74,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Maker</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features3-m" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-cards mbr-section mbr-section-nopadding mbr-after-navbar" id="features3-m" style="background-color: rgb(255, 255, 255);">
 
     
 
